# mvbitfield

./: .gitignore  Cargo.toml  README.md  RELEASES.md  mvbitfield.code-workspace  run-tests.sh
.github/workflows/: ci.yml
mvbitfield/: Cargo.toml
mvbitfield-macros/: Cargo.toml  README.md
mvbitfield-macros/src/: ast.rs  gen.rs  pack.rs
mvbitfield/src/: example.rs  lib.rs  prelude.rs
mvbitfield/tests/: bitfield_accessor_types.rs  clippy.rs  hostile_environment.rs  simple.rs
mvbitfield/tests_error/: accessor_incompatible.rs  accessor_incompatible.stderr  discriminant_range.rs  discriminant_range.stderr  enum_discriminants.rs  enum_discriminants.stderr  enum_too_wide.rs  enum_too_wide.stderr  error_in_hostile_environment.rs  error_in_hostile_environment.stderr  field_attribute_reserved.rs  field_attribute_reserved.stderr  flexible_zero_width.stderr  packing_incomplete.stderr  packing_overflow.stderr
