[workspace]
members = ["mvbitfield", "mvbitfield-macros"]

[workspace.package]
version = "0.1.0"
authors = ["Michael VanBemmel <mvanbem@mvanbem.net>"]
edition = "2021"
repository = "https://github.com/mvanbem/mvbitfield"
license = "MIT"

[workspace.dependencies]
bitint = { git = "https://github.com/mvanbem/bitint", rev = "33defb2f9632998efe1cfa41e0d59e2e01f24768" }
mvbitfield = { path = "mvbitfield" }
mvbitfield-macros = { path = "mvbitfield-macros" }
proc-macro2 = "1"
quote = "1"
syn = "2"
trybuild = "1"
