[package]
name = "mvbitfield-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "mvbitfield's proc macros."
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
