[package]
name = "mvbitfield"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
features = ["doc", "_nightly"]

[features]
doc = []
_nightly = []

[dependencies]
mvbitfield-macros = { path = "../mvbitfield-macros" }

[dependencies.bitint]
git = "https://github.com/mvanbem/bitint"
rev = "b0a26b96b59a1148093315cdbacdc5143fe9564a"

[dev-dependencies]
trybuild = "1"
