[package]
name = "mvbitfield"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Generates bitfield struct types that can insert and extract bit-aligned fields."
repository.workspace = true
license.workspace = true
keywords = ["bitint", "bit", "bitfield", "bitflag"]
categories = ["data-structures", "no-std"]

[package.metadata.docs.rs]
features = ["doc", "_nightly"]

[features]
doc = []
_nightly = []
_trybuild_tests = []

[dependencies]
bitint = { workspace = true }
mvbitfield-macros = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
